@@ -1,6 +1,8 @@
 require 'test_helper'
 
 class BalancedTest < Test::Unit::TestCase
+  include CommStub
+
   def setup
     @marketplace_uri = '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO'
 
@@ -26,7 +28,6 @@ class BalancedTest < Test::Unit::TestCase
       :billing_address => address,
       :description => 'Shopify Purchase'
     }
-
   end
 
   def test_successful_purchase
@@ -151,6 +152,26 @@ class BalancedTest < Test::Unit::TestCase
     )
     hold_uri = '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO/holds/HL7dYMhpVBcqAYqxLF5mZtQ5'
     assert response = @gateway.capture(nil, hold_uri)  # captures the full amount
+    assert_instance_of Response, response
+    assert_success response
+    assert_equal '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO/debits/WD2x6vLS7RzHYEcdymqRyNAO', response.authorization
+    assert response.test?
+  end
+
+  def test_successful_authorization_capture_with_on_behalf_of_uri
+    @gateway.expects(:ssl_request).times(1).returns(
+        successful_purchase_response
+    )
+
+    hold_uri = '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO/holds/HL7dYMhpVBcqAYqxLF5mZtQ5'
+    on_behalf_of_uri = '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO/accounts/AC73SN17anKkjk6Y1sVe2uaq'
+
+    response = stub_comms do
+      @gateway.capture(nil, hold_uri, :on_behalf_of_uri => on_behalf_of_uri)
+    end.check_request do |endpoint, data, headers|
+      assert_match(/on_behalf_of_uri=\/v1\/marketplaces\/TEST-MP73SaFdpQePv9dOaG5wXOGO\/accounts\/AC73SN17anKkjk6Y1sVe2uaq/, data)
+    end.respond_with(successful_purchase_response)
+
     assert_instance_of Response, response
     assert_success response
     assert_equal '/v1/marketplaces/TEST-MP73SaFdpQePv9dOaG5wXOGO/debits/WD2x6vLS7RzHYEcdymqRyNAO', response.authorization
